add pact test (#1988)
* add pact test

* fix annotation